--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,52 @@
+body{
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    color: #ffffff;
+    margin: 0;
+    padding: 5%;
+    background-color:brown;
+}
+header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
+.navigation{
+  padding: auto;
+  color: white;
+  border: #ffffff;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: center;
+    float: inline-end;
+    
+  }
+  
+  #Home{
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+    color: black;
+  }
 
+  #Inline-Styling{
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+    color: black;
+  }
